--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -31,7 +31,7 @@
                         </a>
                     </li> -->
                 </ul>
-                <p class="copyright text-muted">Thanks for participating!</p>
+                <p class="copyright text-muted text-center">Thanks for participating!</p>
             </div>
         </div>
     </div>
