--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="text-center">
-                    <h1>How Do You Stream?</h1>
+                    <h1>How do you stream?</h1>
                 </div>
             </div>
         </div>
